--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3'
 services:
   api:
     image: wns1601/registration-api:1.0
+    container_name: registration-api
     volumes:
       - ./databases:/opt/app/databases
     ports:
