--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,11 @@ services:
     ports:
       - 3000:3000
     restart: always
+  client:
+    image: wns1601/registration-client:1.0
+    container_name: registration-client
+    ports: 
+      - 8080:80
+    depends_on: 
+      - api
+    restart: always
